# wpp_selenium_bot

./: .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: constants.py  exceptions.py  logger_factory.py  settings.py
app/files/chrome_data/: .gitignore
app/maps_bot/: bot.py  models.py  schema.py  wrapper.py
app/middleware/: middlewares.py
app/middleware/error_handlers/: api.py  pydantic_error.py
app/middleware/fastapi/security/: http.py
app/routers/: routers.py
app/routers/google_sheets/: read.py  router.py
app/routers/wpp_bot/: browser_session.py  get_messages.py  login.py  router.py  send_messages.py
app/schemas/google_sheets/: columns.py
app/schemas/wpp_web_bot/: html_wpp_identifiers.py  media_types.py
app/services/: wpp_g_sheets_bot.py
app/services/aws_kinesis/: data_analytics.py  send_data_to_kinesis.py
app/services/google_sheets/: spreadsheets.py
app/services/wpp_web_bot/: wrapper.py
app/spreadsheets/: spreadsheets.py
app/wpp_bot/: bot.py  wrapper.py
docker/fastapi/: Dockerfile
docker/fastapi+selenium/: .DockerFile  Dockerfile  compose.yaml
new app/: .gitignore  README.md  requirements.txt
new app/app/: main.py
new app/app/config/: settings.py
new app/app/routers/wpp_web_bot/: router.py  send_messages.py
new app/app/services/aws_kinesis/: data_streams.py
new app/app/services/google_sheets/: spreadsheets.py
new app/app/services/wpp_web_bot/: bot.py  wrapper.py
